--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,24 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+	<!-- Font -->
+	
+	<link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700%7CAllura" rel="stylesheet">
+
+
+
+  <link href="/src/css/common-css/ionicons.css" rel="stylesheet">
+  
+	<link href="/src/css/common-css/fluidbox.min.css" rel="stylesheet">
+	
+	<link href="/src/css/common-css/bootstrap.css" rel="stylesheet">
+	
+	<link href="/src/css/01-cv-portfolio/css/styles.css" rel="stylesheet">
+	
+	<!-- <Link href="/src/css/01-cv-portfolio/css/responsive.css" rel="stylesheet"> -->
+
+
     <title>React App</title>
   </head>
   <body>
